Bug 332262 - Problem with GRUB2 setup in kde system configuration
Summary: Problem with GRUB2 setup in kde system configuration
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_grub2 (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Konstantinos Smanis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-17 21:53 UTC by Daniel Moyne
Modified: 2022-09-20 04:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Moyne 2014-03-17 21:53:44 UTC
When installing "kde-config-grub2" (assuming that GRUB2 is already installed) the application is not checking what is setup in GRUB2 for "Hide menu for:" option.
In my case the "kde-config-grub2" was showing this option as unchecked though it was configured as checked in GRUB2 (I would imagine for 0 second). Consequently when booting I had no GRUB2 configuration menu displayed though  "kde-config-grub2" was saying the opposit.
To fix the bug it I prosided as follow:
- check this option in  "kde-config-grub2",
- reboot: no GRUB2 menu displayed (as set).
- uncheck this option in  "kde-config-grub2",
- reboot: GRUB2 menu displayed (as set).

To fix it when installing  "kde-config-grub2" you have to adapt all options in 
 "kde-config-grub2" as configured in GRUB2 which is apparently not the case.
Comment 1 Konstantinos Smanis 2014-03-17 22:55:43 UTC
Hi,

can you systematically reproduce this inconsistency between kde-config-grub2 and your GRUB2 configuration? A one-time missmatch is odd and hard to explain.

Please attach your /etc/default/grub.original as well. It is the configuration file before kde-config-grub2 runs for the first time on a system. Any incosistency should be able to be reproduced by using this file in place of /etc/default/grub.
Comment 2 Daniel Moyne 2014-03-19 09:37:27 UTC
Nop excepted if I remove kde-config-grub2 and reinstall it because I think this is where the problem is. This application is configured to change GRUB2 setting except when being installed the first time when it should get the GRUB2 configuration collected to udpade first setting.
Comment 3 Konstantinos Smanis 2014-03-19 11:43:45 UTC
Yeah, I'm the developer. Please attach the requested file, it's the only thing that changes between the first time and the next ones. If there is anything wrong, we will be able to reproduce the bug, otherwise there is not much to do.

Thanks!
Comment 4 Daniel Moyne 2014-03-20 17:10:57 UTC
sorry I explained everything. There is nothing more I can do. Now everything works fine.
Comment 5 Konstantinos Smanis 2014-04-03 20:53:13 UTC
Git commit 8a60f1a1f75cc012ec7deca85e6783037ed6fccd by Konstantinos Smanis.
Committed on 03/04/2014 at 20:42.
Pushed by ksmanis into branch 'master'.

Allow zero GRUB_HIDDEN_TIMEOUT.

Seems like the Kubuntu scripts treat GRUB_HIDDEN_TIMEOUT=0 as a special
case where they completely bypass GRUB_TIMEOUT and boot without showing
the menu at all. I think this happens when you have only one OS
installed but I didn't bother to do extended testing.

Allowing a zero timeout value may seem a bit counterintuitive to the
user, but it's a valid value after all, let's allow it.

Also improved the common-case scenario in unquoteWord() for empty
strings.

M  +4    -0    src/common.cpp
M  +7    -4    src/kcm_grub2.cpp
M  +0    -3    ui/kcm_grub2.ui

http://commits.kde.org/kcm-grub2/8a60f1a1f75cc012ec7deca85e6783037ed6fccd