Allow zero GRUB_HIDDEN_TIMEOUT.

Seems like the Kubuntu scripts treat GRUB_HIDDEN_TIMEOUT=0 as a special
case where they completely bypass GRUB_TIMEOUT and boot without showing
the menu at all. I think this happens when you have only one OS
installed but I didn't bother to do extended testing.

Allowing a zero timeout value may seem a bit counterintuitive to the
user, but it's a valid value after all, let's allow it.

Also improved the common-case scenario in unquoteWord() for empty
strings.

BUG: 332262